# prefecttask

./: README.md  requirements.txt  setup.cfg
sphinxcontrib/prefecttask/: __init__.py  prefecttask.py
